# p44btdmx

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  needed ESP IDF patch - 0001-vfs.c-set_global_fd_sets-was-broken-because-it-itera.patch  sdkconfig.defaults
main/: CMakeLists.txt  component.mk  esp_bt.cpp  esp_bt.hpp  esp_main.c  p44btdmx.cpp  p44btdmx.hpp  p44lrg_config.hpp  p44lrglight.cpp  p44lrglight.hpp  p44utils_config.hpp  p44utils_main.cpp  wifi_init.h
p44btdmx.xcworkspace/: contents.xcworkspacedata
p44btdmx_controller.xcodeproj/: project.pbxproj
p44btdmx_controller.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
p44btdmx_esp32/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
p44btdmx_esp32/main/: CMakeLists.txt  Kconfig.projbuild  esp_bt.cpp  esp_bt.hpp  esp_dmx_rx.cpp  esp_dmx_rx.hpp  esp_main.c  p44btdmx.cpp  p44btdmx.hpp  p44btdmx_main.cpp  p44lrg_config.hpp  p44lrglight.cpp  p44lrglight.hpp  p44lrgtextlight.cpp  p44lrgtextlight.hpp  p44utils_main.cpp  pwmlight.cpp  pwmlight.hpp  wifi_init.c  wifi_init.h
p44btdmx_esp32/p44btdmx_controller.xcodeproj/: project.pbxproj
p44btdmx_iosapp/Graphics/: Contents.json  Icon.afdesign
p44btdmx_iosapp/p44btdmx/: AppDelegate.h  AppDelegate.m  Info.plist  SceneDelegate.h  SceneDelegate.m  SettingsViewController.h  SettingsViewController.m  ViewController.h  ViewController.m  main.m  p44btdmx.h  p44btdmx.mm
p44btdmx_iosapp/p44btdmx.xcodeproj/: project.pbxproj
p44utils-esp32-test.xcodeproj/: project.pbxproj
p44utils-esp32-test/p44utils-esp32-test/: main.cpp
(+16 files in other folders)
